# Advent-of-Code

./: .gitignore  AoC_Solver_Engine.sln  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  helloworld.cpp  vcpkg.json
AoC_Solver_Engine/: AoC_Solver_Engine.cpp  AoC_Solver_Engine.vcxproj  AoC_Solver_Engine.vcxproj.filters  CMakeLists.txt
AoC_Solver_Engine/include/: Aoc_Solver.hpp  Aoc_Utils.hpp
AoC_Solver_Engine/src/: AoC_Solver_Engine.cpp  AoC_Solver_Engine.h  TAoCS_2015_01.cpp  TAoCS_2015_01.h  TAoC_Index.cpp  TAoC_Index.h  TAoC_Solver.cpp  TAoC_Solver.h  TStringList.cpp  TStringList.h  Test_Common.cpp  Test_Common.h
AoC_Solver_Engine/src/2015/: TAoCS_01.cpp  TAoCS_02.cpp  TAoCS_15_01.cpp  TAoCS_15_01.h  TAoCS_15_02.cpp  TAoCS_15_02.h  TAoCS_15_03.cpp  TAoCS_15_03.h  TAoC_15_Index.cpp  TAoC_15_Index.h
AoC_Solver_Engine/src/2015/01/: TAoCS_15_01.cpp  TAoCS_15_01.h
AoC_Solver_Engine/src/2015/02/: TAoCS_15_02.cpp  TAoCS_15_02.h  TBox.cpp  TBox.h
AoC_Solver_Engine/src/2015/03/: T2DMap.cpp  T2DMap.h  TAoCS_15_03.cpp  TAoCS_15_03.h
AoC_Solver_Engine/src/2015/04/: TAoCS_15_04.cpp  TAoCS_15_04.h
AoC_Solver_Engine/src/2015/05/: TAoCS_15_05.cpp  TAoCS_15_05.h
AoC_Solver_Engine/src/2015/06/: Grid.cpp  Grid.hpp  TAoCS_15_06.cpp  TAoCS_15_06.h
AoC_Solver_Engine/src/2015/07/: TAoCS_15_07.cpp  TAoCS_15_07.h  TCircuit.cpp  TCircuit.hpp  TWire.cpp  TWire.hpp  y15d07_TInputParser.cpp  y15d07_TInputParser.hpp
AoC_Solver_Engine/src/Utils/MD5/: BenchmarkMD5.cpp  BenchmarkMD5.hpp  JMD5.cpp  JMD5.hpp  (+4 more)
AoC_Solver_Engine/src/_Models/: TAoCS_yy_dd.cpp  TAoCS_yy_dd.h
(+45 files in other folders)
